crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_mutability_specifiers/fallback_functions/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Only a single mutability specifier can be provided.
   ╭─[input.sol:5:28]
   │
 5 │   fallback() external pure view {}
   │                            ──┬─  
   │                              ╰─── Error occurred here.
───╯
